--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
       "jsx": "preserve",
       "incremental": true
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/pages/_app.js"],
     "exclude": ["node_modules"]
   }
   
