--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
     "next": "^13.4.2",
+    "reactjs-popup": "^2.0.5",
     "typescript": "5.0.4"
   },
   "dependencies": {
